* config/h8300/h8300.md: Adjust whitespacing.  Remove 	constraints from expanders.  Replace \@ with @.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@48045 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2001-12-15  Kazu Hirata  <kazu@hxi.com>
+
+	* config/h8300/h8300.md: Adjust whitespacing.  Remove
+	constraints from expanders.  Replace \@ with @.
+
 2001-12-15  Richard Earnshaw  <rearnsha@arm.com>
 
 	* arm/unknown-elf.h (CPP_PREDEFINES): Add a suitable default.
