--- a/gcc/config/h8300/h8300.md
+++ b/gcc/config/h8300/h8300.md
@@ -140,7 +140,7 @@
 
 (define_insn ""
   [(set (match_operand:QI 0 "general_operand_dst" "=r,r ,<,r,r,m")
-	(match_operand:QI 1 "general_operand_src"      " I,r>,r,n,m,r"))]
+	(match_operand:QI 1 "general_operand_src" " I,r>,r,n,m,r"))]
   "TARGET_H8300
    && (register_operand (operands[0],QImode)
        || register_operand (operands[1], QImode))"
@@ -156,7 +156,7 @@
 
 (define_insn ""
   [(set (match_operand:QI 0 "general_operand_dst" "=r,r ,<,r,r,m")
-	(match_operand:QI 1 "general_operand_src"      " I,r>,r,n,m,r"))]
+	(match_operand:QI 1 "general_operand_src" " I,r>,r,n,m,r"))]
   "(TARGET_H8300H || TARGET_H8300S)
    && (register_operand (operands[0],QImode)
        || register_operand (operands[1], QImode))"
@@ -1124,9 +1124,9 @@
    (set_attr "cc" "set_znv,none_0hit")])
 
 (define_expand "iorqi3"
-  [(set (match_operand:QI 0 "bit_operand" "=r,U")
-	(ior:QI (match_operand:QI 1 "bit_operand" "%0,0")
-		(match_operand:QI 2 "nonmemory_operand" "rn,P")))]
+  [(set (match_operand:QI 0 "bit_operand" "")
+	(ior:QI (match_operand:QI 1 "bit_operand" "")
+		(match_operand:QI 2 "nonmemory_operand" "")))]
   ""
   "
 {
@@ -1135,9 +1135,9 @@
 }")
 
 (define_expand "iorhi3"
-  [(set (match_operand:HI 0 "general_operand" "=r,r")
-	(ior:HI (match_operand:HI 1 "general_operand" "%0,0")
-		(match_operand:HI 2 "general_operand" "J,rn")))]
+  [(set (match_operand:HI 0 "general_operand" "")
+	(ior:HI (match_operand:HI 1 "general_operand" "")
+		(match_operand:HI 2 "general_operand" "")))]
   ""
   "")
 
@@ -1201,9 +1201,9 @@
    (set_attr "cc" "set_znv,none_0hit")])
 
 (define_expand "xorqi3"
-  [(set (match_operand:QI 0 "bit_operand" "=r,U")
-	(xor:QI (match_operand:QI 1 "bit_operand" "%0,0")
-		(match_operand:QI 2 "nonmemory_operand" "rn,O")))]
+  [(set (match_operand:QI 0 "bit_operand" "")
+	(xor:QI (match_operand:QI 1 "bit_operand" "")
+		(match_operand:QI 2 "nonmemory_operand" "")))]
   ""
   "
 {
@@ -1610,7 +1610,7 @@
 {
   if (GET_CODE (XEXP (operands[0], 0)) == SYMBOL_REF
       && SYMBOL_REF_FLAG (XEXP (operands[0], 0)))
-    return \"jsr\\t\@%0:8\";
+    return \"jsr\\t@%0:8\";
   else
     return \"jsr\\t%0\";
 }"
@@ -1634,7 +1634,7 @@
 {
   if (GET_CODE (XEXP (operands[1], 0)) == SYMBOL_REF
       && SYMBOL_REF_FLAG (XEXP (operands[1], 0)))
-    return \"jsr\\t\@%1:8\";
+    return \"jsr\\t@%1:8\";
   else
     return \"jsr\\t%1\";
 }"
