* gcc.c, config/fr30/fr30.c, config/v850/v850-c.c, toplev.c: Use 	American spelling in messages. 	* po/gcc.pot: Regenerate.
ch:
	* decl.c, parse.c, typeck.c: Use American spelling in messages.

cp:
	* lang-options.h: Use American spelling in messages.


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@48047 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ch/ChangeLog
+++ b/gcc/ch/ChangeLog
@@ -1,3 +1,7 @@
+2001-12-15  Joseph S. Myers  <jsm28@cam.ac.uk>
+
+	* decl.c, parse.c, typeck.c: Use American spelling in messages.
+
 2001-12-10  Joseph S. Myers  <jsm28@cam.ac.uk>
 
 	* chill.texi: Don't condition menus on @ifinfo.
