--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,9 @@
+2001-12-15  Joseph S. Myers  <jsm28@cam.ac.uk>
+
+	* gcc.c, config/fr30/fr30.c, config/v850/v850-c.c, toplev.c: Use
+	American spelling in messages.
+	* po/gcc.pot: Regenerate.
+
 2001-12-15  Kazu Hirata  <kazu@hxi.com>
 
 	* config/h8300/h8300.md: Adjust whitespacing.  Remove
