* c-typeck.c, config/i386/i386.h, config/mcore/mcore.h, 	config/ns32k/ns32k.h, config/rs6000/sysv4.h, fold-const.c, 	toplev.c, cppinit.c, cppmacro.c, gcc.c: Use "built-in" and 	"bit-field" spellings in messages. 	* po/gcc.pot: Regenerate.
ch:
	* expr.c: Use "built-in" spelling in messages.


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@48048 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ch/ChangeLog
+++ b/gcc/ch/ChangeLog
@@ -1,5 +1,9 @@
 2001-12-15  Joseph S. Myers  <jsm28@cam.ac.uk>
 
+	* expr.c: Use "built-in" spelling in messages.
+
+2001-12-15  Joseph S. Myers  <jsm28@cam.ac.uk>
+
 	* decl.c, parse.c, typeck.c: Use American spelling in messages.
 
 2001-12-10  Joseph S. Myers  <jsm28@cam.ac.uk>
