* java/io/DataOutputStream (write (byte[], int, int)): Update 	"written" correctly. Fix from the ORP team.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@48050 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/libjava/ChangeLog
+++ b/libjava/ChangeLog
@@ -1,3 +1,8 @@
+2001-12-16  Bryce McKinlay  <bryce@waitaki.otago.ac.nz>
+
+	* java/io/DataOutputStream (write (byte[], int, int)): Update 
+	"written" correctly. Fix from the ORP team.
+
 2001-12-15  Bryce McKinlay  <bryce@waitaki.otago.ac.nz>
 
 	* include/jvm.h (_Jv_VTable::idx_to_offset): New method.
