--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,9 @@
+2001-12-15  Zack Weinberg  <zack@codesourcery.com>
+
+	* unwind-dw2-fde-glibc.c: #define _Unwind_Find_FDE to itself
+	before including unwind-dw2-fde.c, if we are not using the
+	special code in this file.
+
 2001-12-15  Richard Henderson  <rth@redhat.com>
 
 	* config/alpha/alpha.h (TARGET_SWITCHES): Turn on
@@ -98,9 +104,9 @@ Sat Dec 15 14:13:03 CET 2001  Jan Hubicka  <jh@suse.cz>
 2001-12-14  Aldy Hernandez  <aldyh@redhat.com>
 
 	* c-parse.in (typename): Do not split attributes.
-        Remove unsupported attributes warning.
+	Remove unsupported attributes warning.
 
-        * c-decl.c (groktypename): Apply attributes.
+	* c-decl.c (groktypename): Apply attributes.
 
 2001-12-14  Richard Henderson  <rth@redhat.com>
 
