* sem_ch7.adb: Wrap comment.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@48060 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ada/ChangeLog
+++ b/gcc/ada/ChangeLog
@@ -1,3 +1,7 @@
+2001-12-15  Richard Henderson  <rth@redhat.com>
+
+	* sem_ch7.adb: Wrap comment.
+
 2001-12-16  Joseph S. Myers  <jsm28@cam.ac.uk>
 
 	* 5ataprop.adb, 5atpopsp.adb, 5ftaprop.adb, 5gmastop.adb,
