--- a/gcc/java/ChangeLog
+++ b/gcc/java/ChangeLog
@@ -1,3 +1,8 @@
+2001-12-16  Bryce McKinlay  <bryce@waitaki.otago.ac.nz>
+
+	* decl.c (java_init_decl_processing): Build otable_type correctly.
+	otable_decl is an otable_type.
+
 2001-12-15  Bryce McKinlay  <bryce@waitaki.otago.ac.nz>
 
 	* java-tree.h (otable_methods, otable_decl, otable_syms_decl,
