--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,9 @@
+2001-12-16  Craig Rodrigues  <rodrigc@gcc.gnu.org>
+
+	PR other/3725
+	* configure.in: Add AC_SUBST(target_alias).
+	* configure: Regenerated.
+
 2001-12-15  Richard Henderson  <rth@redhat.com>
 
 	* config/alpha/alpha.md (sibcall_osf_1_er): New.
