* c-lex.c (lex_number): Use ISXDIGIT/hex_value. 	* vax/xm-vms.h (FILE_NAME_NONDIRECTORY): Use ISUPPER/TOLOWER. 	* fold-const.c (real_hex_to_f): Use hex_value. 	* real.c (asctoeg): Use hex_value & ISXDIGIT. 	* toplev.c (toplev_main): Call hex_init. 	* tradcpp.c (main): Call hex_init.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@48068 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/f/ChangeLog
+++ b/gcc/f/ChangeLog
@@ -1,3 +1,9 @@
+Sun Dec 16 08:52:48 2001  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>
+
+	* lex.c (ffelex_backslash_, ffelex_cfebackslash_): Use hex_value.
+	* target.c (ffetarget_integerhex, ffetarget_typeless_hex): Use
+	hex_p/hex_value.
+
 2001-12-14  Roger Sayle <roger@eyesopen.com>
 
 	* com-rt.def: Use __builtin_sqrt instead of __builtin_fsqrt.
