--- a/gcc/java/ChangeLog
+++ b/gcc/java/ChangeLog
@@ -1,3 +1,7 @@
+2001-12-16  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>
+
+	* lex.c (java_read_unicode, java_lex): Use hex_p/hex_value.
+
 2001-12-16  Bryce McKinlay  <bryce@waitaki.otago.ac.nz>
 
 	* decl.c (java_init_decl_processing): Build otable_type correctly.
