--- a/gcc/f/ChangeLog
+++ b/gcc/f/ChangeLog
@@ -1,3 +1,8 @@
+Sun Dec 16 10:36:51 2001  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>
+
+	* Make-lang.in (f/version.o): Depend on f/version.h.
+	* version.c: Include ansidecl.h and f/version.h.	
+
 Sun Dec 16 08:52:48 2001  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>
 
 	* lex.c (ffelex_backslash_, ffelex_cfebackslash_): Use hex_value.
