--- a/gcc/cp/ChangeLog.1
+++ b/gcc/cp/ChangeLog.1
@@ -2309,7 +2309,7 @@ Mon Mar  6 15:07:02 1995  Jason Merrill  <jason@phydeaux.cygnus.com>
 	function.
 
 	Make base initialization more re-entrant so that synthesis on the
-	fly will work (and, eventually, template instantation on the fly).
+	fly will work (and, eventually, template instantiation on the fly).
 	* init.c (sort_member_init): Don't bother with members that can't be
 	initialized.  Reorganize a bit.  Don't initialize base members here.
 	(sort_base_init): New function, like sort_member_init, but for base
