* ChangeLog, Make-lang.in, class.c, expr.c, gcj.texi, java-tree.h, 	jcf-parse.c, jcf-write.c, lex.c, parse.h, parse.y, verify.c: Fix 	spelling errors.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@48075 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/java/gcj.texi
+++ b/gcc/java/gcj.texi
@@ -278,7 +278,7 @@ The classfile built by @code{gcj} for the class @code{java.lang.Object}
 attribute @code{gnu.gcj.gcj-compiled}. The compiler looks for this
 attribute when loading @code{java.lang.Object} and will report an error
 if it isn't found, unless it compiles to bytecode (the option
-@code{-fforce-classes-archive-check} can be used to overide this
+@code{-fforce-classes-archive-check} can be used to override this
 behavior in this particular case.)
 
 @table @gcctabopt
