--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2001-12-16  Richard Henderson  <rth@redhat.com>
+
+	* toplev.c (parse_options_and_default_flags): Don't enable
+	flag_cprop_registers at -O1.
+
 2001-12-16  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>
 
 	* avr.c (avr_simplify_comparision_p, adjust_insn_length,
