--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+Sun Dec 16 13:13:01 2001  Richard Kenner  <kenner@vlsi1.ultra.nyu.edu>
+
+	* expr.c (highest_pow2_factor, case INTEGER_CST): Fix error in
+	last change.
+
 2001-12-16  Richard Henderson  <rth@redhat.com>
 
 	* toplev.c (parse_options_and_default_flags): Don't enable
