* c-common.c, c-common.h (back_end_hook): Remove. 	* c-lang.c (finish_file): Remove back_end_hook. cp: 	* decl2.c (finish_file): Remove back_end_hook.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@48079 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/cp/ChangeLog
+++ b/gcc/cp/ChangeLog
@@ -1,3 +1,7 @@
+2001-12-16  Neil Booth  <neil@daikokuya.demon.co.uk>
+
+	* decl2.c (finish_file): Remove back_end_hook.
+
 2001-12-16  Joseph S. Myers  <jsm28@cam.ac.uk>
 
 	* ChangeLog.1, ChangeLog.2, ChangeLog, NEWS, call.c, class.c,
