--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2001-12-16  Neil Booth  <neil@daikokuya.demon.co.uk>
+
+	* c-common.c, c-common.h (back_end_hook): Remove.
+	* c-lang.c (finish_file): Remove back_end_hook.
+
 Sun Dec 16 13:13:01 2001  Richard Kenner  <kenner@vlsi1.ultra.nyu.edu>
 
 	* expr.c (highest_pow2_factor, case INTEGER_CST): Fix error in
